Lagt til notater

--- a/esport_style.css
+++ b/esport_style.css
@@ -99,5 +99,5 @@ main{
     grid-template-columns: repeat(12, 1fr);
 }
 
-/* Legg til mellomromm mellom nav og header */
-
+/* Vi skal legge inn de forskjellige sidene og teksten vår */
+/* Teksten skal også tilføres linker */
