--- a/esport_style.css
+++ b/esport_style.css
@@ -64,8 +64,8 @@ body{
 }
 header{
     width: 100%;
-    background-color: #0D5EAF;
-    border-bottom: #595952 solid 5px;
+    background-color: #595952;
+    border-bottom: rgba(51,51,47,0.96) solid 5px;
     text-align: center;
 }
 
@@ -86,7 +86,7 @@ header{
 }
 
 nav{
-    border-left: #595952 solid 5px;
+    border-left: rgba(51,51,47,0.96) solid 5px;
     background-color: #595952;
     width: 20%;
     height: 100%;
@@ -101,7 +101,11 @@ nav div{
 nav div img{
     height: 80%;
     width: 100%;
+    display: block;
 }
+
+
+
 a {
     text-decoration: none;
     color: white;
